# PF_IA_Antigravity

./: README.md  main.py  pyproject.toml
01-fundamentos-probabilidad/: Practica_Fundamentos.ipynb  Teoria_Probabilidad.md
02-estimacion-filtro-bayes/: Practica_Filtro_Bayes.ipynb  Teoria_Filtro_Bayes.md
03-filtros-kalman/: Practica_Kalman.ipynb  Teoria_Kalman.md
04-filtro-particulas/: Practica_Particulas.ipynb  Teoria_Particulas.md
05-pro-avanzado/: Practica_Proye_Integrador.ipynb  (+1 more)
curso-filtros/: .gitignore  CLAUDE.md  Makefile  glosario.md  info.md  pyproject.toml
curso-filtros/.specify/: feature.json
curso-filtros/.specify/extensions/: .registry
curso-filtros/.specify/integrations/: claude.manifest.json  speckit.manifest.json
curso-filtros/.specify/memory/: constitution.md
curso-filtros/.specify/templates/: plan-template.md  tasks-template.md
curso-filtros/.specify/workflows/: workflow-registry.json
curso-filtros/cursos/modulo_01_probabilidad/: 01_teoria.ipynb  02_practica.ipynb  rubrica.md
curso-filtros/cursos/modulo_02_bayes_discreto/: 01_teoria.ipynb  02_practica.ipynb  rubrica.md
curso-filtros/db/migrations/: 001_initial.sql
curso-filtros/plantillas/: plantilla_practica.ipynb  plantilla_teoria.ipynb
curso-filtros/specs/001-curso-filtros-bayesianos/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
curso-filtros/specs/001-curso-filtros-bayesianos/checklists/: module-quality.md  requirements.md
curso-filtros/specs/001-curso-filtros-bayesianos/contracts/: filter-contract.md  notebook-contract.md
curso-filtros/src/cli/: main.py
curso-filtros/src/db/: progreso.py
curso-filtros/src/filtros/: __init__.py  bayes_discreto.py  kalman_lineal.py
curso-filtros/src/utils/: dataset.py  metricas.py  visualizacion.py
curso-filtros/tests/db/: test_progreso.py
curso-filtros/tests/filtros/: test_bayes_discreto.py  test_kalman_lineal.py
curso-filtros/tests/utils/: test_dataset.py  test_metricas.py
(+3 files in other folders)
