[project]
name = "pf-ia-antigravity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "manim>=0.20.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]
