[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curso-filtros"
version = "0.1.0"
description = "Curso Completo de Filtros Bayesianos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "plotly>=5.22",
    "rerun-sdk>=0.16",
    "jupyter",
    "nbconvert",
    "nbval",
    "filterpy",
    "pykalman",
    "typer[all]>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbval>=0.10",
]

[project.scripts]
filtros = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["cursos/", "plantillas/"]

[[tool.mypy.overrides]]
module = ["scipy.*", "filterpy.*", "pykalman.*", "plotly.*", "rerun.*", "typer.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
